BUG-92830 Provide feature flag as an attribute of API for every new feature being added for DLM-1.1 release
Change-Id: Id0d79940e6dd39c0fa778c7ebdfcf1b7330025b1